# cFE-beavsat

./: Agenda.txt  README.md  fasterMaking.sh
apps/cam_dem/fsw/for_build/: Makefile
apps/cam_dem/fsw/mission_inc/: cam_dem_mission_cfg.h  cam_dem_perfids.h
apps/cam_dem/fsw/platform_inc/: cam_dem_msgids.h  cam_dem_platform_cfg.h
apps/cam_dem/fsw/src/: cam_dem_app.c  cam_dem_app.h  cam_dem_msg.h  cam_dem_private_ids.h  cam_dem_private_types.h
apps/cam_dem/fsw/unit_test/: Makefile
apps/picam/: CMakeLists.txt
apps/pisata_hwlib/: CMakeLists.txt
apps/pisata_hwlib/fsw/for_build/: Makefile
apps/pisata_hwlib/fsw/public_inc/: lsm9ds1.h  lsm9ds1REGS.h  lsm9ds1_lib.h  pisata_hwlib.h
apps/pisata_hwlib/fsw/src/: lsm9ds1.c  lsm9ds1_lib.c  pisata_hwlib.c  pisata_hwlib_version.h
apps/safety_monitor/fsw/for_build/: Makefile
apps/safety_monitor/fsw/mission_inc/: safety_monitor_mission_cfg.h  safety_monitor_perfids.h
apps/safety_monitor/fsw/platform_inc/: safety_monitor_msgids.h  safety_monitor_platform_cfg.h
apps/safety_monitor/fsw/src/: safety_monitor_app.c  safety_monitor_app.h  safety_monitor_msg.h  safety_monitor_private_ids.h  safety_monitor_private_types.h
apps/safety_monitor/fsw/unit_test/: Makefile
apps/sch_lab/fsw/platform_inc/: sch_lab_sched_tab.h
apps/telem_r/fsw/for_build/: Makefile
apps/telem_r/fsw/mission_inc/: telem_r_mission_cfg.h  telem_r_perfids.h
apps/telem_r/fsw/platform_inc/: telem_r_msgids.h
apps/telem_r/fsw/src/: .telem_r_app.c.swo  .telem_r_app.c.swp  telem_r_app.c  (+4 more)
scripts/: m32-flag-rm.sh
tools/elf2cfetbl/: CMakeLists.txt
(+43 files in other folders)
